--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     #typed-text {
       color: #82529C;
       font-weight: 600;
-      font-size: 1.5rem;
+      font-size: 3rem;
       text-align: left;
-      text-shadow: 0 0 5px #82529C, 0 0 10px #82529C, 0 0 15px #82529C;
+      text-shadow: 0 0 2px #82529C, 0 0 8px #82529C, 0 0 3px #82529C;
     }
   </style>
 </head>
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="logo">
         <!-- Logo SVG externo -->
-        <img src="recursos/PixelPoplogo.svg" alt="PixelPopLogo" width="140" height="140">
+        <img src="Recursos/PixelPoplogo.svg" alt="PixelPopLogo" width="140" height="140">
       </div>
       <nav class="nav">
         <ul>
